vercel image fix

--- a/portfolio_site/public/index.html
+++ b/portfolio_site/public/index.html
@@ -48,7 +48,7 @@
 
             <div class="education-frame has-bg">
               <div class="school-logo">
-                <img src="/icons/uchicago-logo.svg" alt="University of Chicago" class="school-logo-img"
+                <img src="/icons/Uchicago-logo.svg" alt="University of Chicago" class="school-logo-img"
                 style="width: 130px; transform: scale(1.3); transform-origin: center;">
               </div>
               <div class="education-info">
