--- a/portfolio_site/public/index.html
+++ b/portfolio_site/public/index.html
@@ -116,12 +116,15 @@
         </div>
         <h3>Tools & Platforms</h3>
         <div class="grid">
-          <div class="item"><i class="devicon-nodejs-plain colored"></i><span>Node.js</span></div>
           <div class="item"><i class="devicon-git-plain colored"></i><span>Git</span></div>
-          <div class="item"><i class="devicon-linux-plain"></i><span>Linux</span></div>
-          <div class="item"><i class="devicon-docker-plain colored"></i><span>Docker</span></div>
           <div class="item"><i class="devicon-jupyter-plain colored"></i><span>Jupyter</span></div>
           <div class="item"><i class="devicon-mysql-plain colored"></i><span>SQL</span></div>
+          <div class="item"><i class="devicon-linux-plain"></i><span>Linux</span></div>
+          <div class="item"><i class="devicon-nodejs-plain colored"></i><span>Node.js</span></div>
+          <div class="item"><i class="devicon-vercel-plain"></i><span>Vercel</span></div>
+          <div class="item"><i class="devicon-docker-plain colored"></i><span>Docker</span></div>
+          
+        
         </div>
         <h3>Data & Frameworks</h3>
         <div class="grid">
