--- a/portfolio_site/public/index.html
+++ b/portfolio_site/public/index.html
@@ -1,15 +1,26 @@
 <!DOCTYPE html>
 <html lang="en">
-<head>
-  <meta charset="UTF-8" />
-  <meta name="viewport" content="width=device-width, initial-scale=1" />
-  <title>EvanYuanWeb</title>
-  <link rel="preconnect" href="https://fonts.googleapis.com">
-  <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
-  <link href="https://fonts.googleapis.com/css2?family=Inter:wght@300;400;600;800&display=swap" rel="stylesheet">
-  <link rel="stylesheet" href="https://cdn.jsdelivr.net/gh/devicons/devicon@latest/devicon.min.css">
-  <link rel="stylesheet" href="/styles.css" />
-</head>
+  <head>
+    <meta charset="UTF-8" />
+    <meta name="viewport" content="width=device-width, initial-scale=1" />
+    <title>EvanYuanWeb</title>
+    <meta name="description" content="Personal portfolio of Evan Yuan — UChicago CS & Statistics. Projects, tech stack, blog and contact." />
+    <meta property="og:title" content="Evan Yuan — Portfolio" />
+    <meta property="og:description" content="Personal portfolio of Evan Yuan — UChicago CS & Statistics. Projects, tech stack, blog and contact." />
+    <meta property="og:type" content="website" />
+    <meta name="twitter:card" content="summary_large_image" />
+    <meta name="twitter:title" content="Evan Yuan — Portfolio" />
+    <meta name="twitter:description" content="Personal portfolio of Evan Yuan — UChicago CS & Statistics. Projects, tech stack, blog and contact." />
+    <link rel="preconnect" href="https://fonts.googleapis.com">
+    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+    <link href="https://fonts.googleapis.com/css2?family=EB+Garamond:ital,wght@0,400;0,600;0,700;1,400;1,600;1,700&display=swap" rel="stylesheet">
+    <link href="https://fonts.googleapis.com/css2?family=Inter:wght@300;400;600;800&display=swap" rel="stylesheet">
+    <link rel="stylesheet" href="https://cdn.jsdelivr.net/gh/devicons/devicon@latest/devicon.min.css">
+    <link rel="stylesheet" href="/styles.css" />
+    <style>
+      body { font-family: 'EB Garamond', Garamond, serif; }
+    </style>
+  </head>
 <body>
   <div class="bg">
     <div class="stars"></div>
@@ -25,6 +36,7 @@
         <div class="cta">
           <a class="btn" href="#about">About me</a>
           <a class="btn outline" href="#stack">Tech Stack</a>
+          <a class="btn outline" href="blog.html">Blog</a>
         </div>
       </div>
     </section>
@@ -48,7 +60,7 @@
 
             <div class="education-frame has-bg">
               <div class="school-logo">
-                <img src="/icons/Uchicago-logo.svg" alt="University of Chicago" class="school-logo-img"
+                <img src="/icons/Uchicago-logo.svg" alt="University of Chicago" class="school-logo-img" loading="lazy"
                 style="width: 130px; transform: scale(1.3); transform-origin: center;">
               </div>
               <div class="education-info">
@@ -79,21 +91,21 @@
         </div>
       </div>
       <div class="icon-links">
-        <a class="icon-card" href="https://github.com/XiyueYuan" target="_blank" aria-label="GitHub">
+        <a class="icon-card" href="https://github.com/XiyueYuan" target="_blank" rel="noopener noreferrer" aria-label="GitHub">
           <i class="devicon-github-original colored"></i>
           <span>GitHub</span>
         </a>
-        <a class="icon-card" href="https://www.linkedin.com/in/evanyuan/" target="_blank" aria-label="LinkedIn">
+        <a class="icon-card" href="https://www.linkedin.com/in/evanyuan/" target="_blank" rel="noopener noreferrer" aria-label="LinkedIn">
           <i class="devicon-linkedin-plain colored"></i>
           <span>LinkedIn</span>
         </a>
-        <a class="icon-card" href="https://music.apple.com/profile/xiyue_evan" target="_blank" aria-label="Apple Music">
+        <a class="icon-card" href="https://music.apple.com/profile/xiyue_evan" target="_blank" rel="noopener noreferrer" aria-label="Apple Music">
           <svg viewBox="0 0 24 24" width="48" height="48" aria-hidden="true">
             <path fill="#ff3b30" d="M16 3v11.55a3.5 3.5 0 1 1-1.5-2.85V6.5H10V17.55a3.5 3.5 0 1 1-1.5-2.85V5h7.5z"/>
           </svg>
           <span>Apple Music</span>
         </a>
-        <a class="icon-card" href="https://www.kaggle.com/evanxyuan" target="_blank" aria-label="Kaggle">
+        <a class="icon-card" href="https://www.kaggle.com/evanxyuan" target="_blank" rel="noopener noreferrer" aria-label="Kaggle">
           <img src="https://cdn.simpleicons.org/kaggle/20BEFF" alt="Kaggle"/>
           <span>Kaggle</span>
         </a>
@@ -131,11 +143,11 @@
           <div class="item"><i class="devicon-flask-original"></i><span>Flask</span></div>
           <div class="item"><i class="devicon-tensorflow-original colored"></i><span>TensorFlow</span></div>
           <div class="item"><i class="devicon-pytorch-original colored"></i><span>PyTorch</span></div>
-          <div class="item"><img src="https://cdn.simpleicons.org/numpy" alt="NumPy"/><span>NumPy</span></div>
+          <div class="item"><img src="https://cdn.simpleicons.org/numpy" alt="NumPy" loading="lazy"/><span>NumPy</span></div>
           <div class="item"><i class="devicon-opencv-plain colored"></i><span>OpenCV</span></div>
-          <div class="item"><img src="/icons/matplotlib.svg" alt="Matplotlib"/><span>Matplotlib</span></div>
+          <div class="item"><img src="/icons/matplotlib.svg" alt="Matplotlib" loading="lazy"/><span>Matplotlib</span></div>
           <div class="item"><i class="devicon-scikitlearn-plain colored"></i><span>scikit-learn</span></div>
-          <div class="item"><img src="/icons/seaborn.svg" alt="Seaborn"/><span>Seaborn</span></div>
+          <div class="item"><img src="/icons/seaborn.svg" alt="Seaborn" loading="lazy"/><span>Seaborn</span></div>
         </div>
       </div>
     </section>
