--- a/portfolio_site/public/index.html
+++ b/portfolio_site/public/index.html
@@ -120,6 +120,7 @@
           <div class="item"><i class="devicon-python-plain colored"></i><span>Python</span></div>
           <div class="item"><i class="devicon-cplusplus-plain colored"></i><span>C++</span></div>
           <div class="item"><i class="devicon-c-plain colored"></i><span>C</span></div>
+          <div class="item"><i class="devicon-rust-plain colored"></i><span>Rust</span></div>
           <div class="item"><i class="devicon-java-plain colored"></i><span>Java</span></div>
           <div class="item"><i class="devicon-r-plain colored"></i><span>R</span></div>
           <div class="item"><i class="devicon-html5-plain colored"></i><span>HTML</span></div>
