--- a/portfolio_site/public/index.html
+++ b/portfolio_site/public/index.html
@@ -120,12 +120,13 @@
           <div class="item"><i class="devicon-python-plain colored"></i><span>Python</span></div>
           <div class="item"><i class="devicon-cplusplus-plain colored"></i><span>C++</span></div>
           <div class="item"><i class="devicon-c-plain colored"></i><span>C</span></div>
-          <div class="item"><i class="devicon-rust-plain colored"></i><span>Rust</span></div>
+          <div class="item"><i class="devicon-rust-line"></i><span>Rust</span></div>
           <div class="item"><i class="devicon-java-plain colored"></i><span>Java</span></div>
           <div class="item"><i class="devicon-r-plain colored"></i><span>R</span></div>
           <div class="item"><i class="devicon-html5-plain colored"></i><span>HTML</span></div>
           <div class="item"><i class="devicon-javascript-plain colored"></i><span>JavaScript</span></div>
           <div class="item"><i class="devicon-css3-plain colored"></i><span>CSS</span></div>
+          <div class="item"><i class="devicon-latex-plain"></i><span>LaTeX</span></div>
         </div>
         <h3>Tools & Platforms</h3>
         <div class="grid">
@@ -141,14 +142,15 @@
         </div>
         <h3>Data & Frameworks</h3>
         <div class="grid">
+          <div class="item"><i class="devicon-numpy-plain"></i><span>Numpy</span></div>
+          <div class="item"><i class="devicon-pandas-line"></i><span>Pandas</span></div>
+          <div class="item"><i class="devicon-matplotlib-plain"></i><span>Matplotlib</span></div>
+          <div class="item"><img src="/icons/seaborn.svg" alt="Seaborn" loading="lazy"/><span>Seaborn</span></div>
+          <div class="item"><i class="devicon-scikitlearn-plain colored"></i><span>Scikit-learn</span></div>
           <div class="item"><i class="devicon-flask-original"></i><span>Flask</span></div>
           <div class="item"><i class="devicon-tensorflow-original colored"></i><span>TensorFlow</span></div>
           <div class="item"><i class="devicon-pytorch-original colored"></i><span>PyTorch</span></div>
-          <div class="item"><img src="https://cdn.simpleicons.org/numpy" alt="NumPy" loading="lazy"/><span>NumPy</span></div>
           <div class="item"><i class="devicon-opencv-plain colored"></i><span>OpenCV</span></div>
-          <div class="item"><img src="/icons/matplotlib.svg" alt="Matplotlib" loading="lazy"/><span>Matplotlib</span></div>
-          <div class="item"><i class="devicon-scikitlearn-plain colored"></i><span>scikit-learn</span></div>
-          <div class="item"><img src="/icons/seaborn.svg" alt="Seaborn" loading="lazy"/><span>Seaborn</span></div>
         </div>
       </div>
     </section>
