update on courses

--- a/portfolio_site/public/index.html
+++ b/portfolio_site/public/index.html
@@ -66,8 +66,8 @@
               <div class="education-info">
                 <h4>University of Chicago</h4>
                 <p>Relevant Courses:</p>
-                <p>1. CMSC 14100: CMSC 14100/14200: Python, data structures, algorithms, recursion, OOP</p>
-                <p>2. MATH 18300/18400: Vectors, matrices, linear systems, eigenvalues </p>
+                <p>1. CMSC 14100/14200: Python, data structures, algorithms, recursion, OOP, and basic software engineering</p>
+                <p>2. MATH 18300/18400: Linear algebra + multivariable calculus—eigenvalues; gradients, divergence/curl, Green–Gauss–Stokes </p>
                 <p>3. STAT 22000: Probability, sampling, hypothesis testing, regression, R</p>
               </div>
             </div>
