update on github icon

--- a/portfolio_site/public/index.html
+++ b/portfolio_site/public/index.html
@@ -92,7 +92,7 @@
       </div>
       <div class="icon-links">
         <a class="icon-card" href="https://github.com/XiyueYuan" target="_blank" rel="noopener noreferrer" aria-label="GitHub">
-          <i class="devicon-github-original colored"></i>
+          <i class="devicon-github-original"></i>
           <span>GitHub</span>
         </a>
         <a class="icon-card" href="https://www.linkedin.com/in/evanyuan/" target="_blank" rel="noopener noreferrer" aria-label="LinkedIn">
