--- a/portfolio_site/public/index.html
+++ b/portfolio_site/public/index.html
@@ -112,6 +112,37 @@
       </div>
     </section>
 
+    <section id="exploration" class="section reveal">
+      <h2>My Exploration</h2>
+      <div class="explore-grid">
+        <div class="bubble">
+          <h3>More to come</h3>
+          <p>Work in progress — stay tuned.</p>
+        </div>
+        <div class="bubble">
+          <img src="/icons/backtest.png" alt="Backtest Dashboard" class="explore-thumb" loading="lazy"/>
+          <div class="bubble-head">
+            <h3>Backtest Dashboard</h3>
+            <a class="gh-link" href="https://github.com/XiyueYuan" target="_blank" rel="noopener noreferrer" aria-label="GitHub">
+              <i class="devicon-github-original"></i>
+            </a>
+          </div>
+          <div class="badges">
+            <span class="badge">FastAPI</span>
+            <span class="badge">Pydantic</span>
+            <span class="badge">Uvicorn</span>
+            <span class="badge">NumPy</span>
+            <span class="badge">Pandas</span>
+            <span class="badge">yfinance</span>
+            <span class="badge">Lightweight Charts</span>
+            <span class="badge">ResizeObserver</span>
+            <span class="badge">CSV Export</span>
+            <span class="badge">Caching</span>
+          </div>
+        </div>
+      </div>
+    </section>
+
     <section id="stack" class="section reveal">
       <h2>Tech Stack</h2>
       <div class="stack">
