--- a/portfolio_site/public/index.html
+++ b/portfolio_site/public/index.html
@@ -123,7 +123,7 @@
           <img src="/icons/backtest.png" alt="Backtest Dashboard" class="explore-thumb" loading="lazy"/>
           <div class="bubble-head">
             <h3>Backtest Dashboard</h3>
-            <a class="gh-link" href="https://github.com/XiyueYuan" target="_blank" rel="noopener noreferrer" aria-label="GitHub">
+            <a class="gh-link" href="https://github.com/XiyueYuan/Backtest_Dash" target="_blank" rel="noopener noreferrer" aria-label="GitHub">
               <i class="devicon-github-original"></i>
             </a>
           </div>
