--- a/portfolio_site/public/index.html
+++ b/portfolio_site/public/index.html
@@ -127,18 +127,7 @@
               <i class="devicon-github-original"></i>
             </a>
           </div>
-          <div class="badges">
-            <span class="badge">FastAPI</span>
-            <span class="badge">Pydantic</span>
-            <span class="badge">Uvicorn</span>
-            <span class="badge">NumPy</span>
-            <span class="badge">Pandas</span>
-            <span class="badge">yfinance</span>
-            <span class="badge">Lightweight Charts</span>
-            <span class="badge">ResizeObserver</span>
-            <span class="badge">CSV Export</span>
-            <span class="badge">Caching</span>
-          </div>
+          <div class="tech-list">FastAPI · Pydantic · NumPy · Pandas · yfinance · Lightweight Charts · Caching</div>
         </div>
       </div>
     </section>
