--- a/portfolio_site/public/blog.html
+++ b/portfolio_site/public/blog.html
@@ -49,7 +49,7 @@
 
     .post-toolbar { display: flex; justify-content: space-between; align-items: center; margin-bottom: 14px; }
     .back-btn { text-decoration: none; }
-    .markdown-body { box-sizing: border-box; min-width: 200px; max-width: 860px; margin: 0 auto; padding: 0 16px 160px; background: transparent !important; }
+    .markdown-body { box-sizing: border-box; min-width: 200px; max-width: 860px; margin: 0 auto; padding: 0 16px 160px; background: transparent !important; font-size: 18px; line-height: 1.85; }
     .home-link { position: fixed; top: 30px; left: 30px; z-index: 10; }
     .lang-switch {
     display: flex;
