--- a/portfolio_site/public/index.html
+++ b/portfolio_site/public/index.html
@@ -34,7 +34,7 @@
         <h1>Hello, I'm Evan Yuan</h1>
         <p>I am a first year student at Uchicago majoring in Computer Science and Statistics</p>
         <div class="cta">
-          <a class="btn" href="#about">About me</a>
+          <a class="btn outline" href="#about">About me</a>
           <a class="btn outline" href="#stack">Tech Stack</a>
           <a class="btn outline" href="blog.html">Blog</a>
         </div>
