add More section in relevant courses

--- a/portfolio_site/public/index.html
+++ b/portfolio_site/public/index.html
@@ -71,6 +71,7 @@
                 <p>3. STAT 22000: Probability, sampling, hypothesis testing, regression, R</p>
                 <p>4. STAT 24300: Matrix decompositions (QR, Singular Value), spectral theorem, systematic methods for high dimensions</p>
               </div>
+              <a class="edu-more" href="/education.html" aria-label="More">More <span class="arrow" aria-hidden="true">→</span></a>
             </div>
           </div>
         </div>
