--- a/portfolio_site/public/education.html
+++ b/portfolio_site/public/education.html
@@ -46,9 +46,10 @@
             <summary><span class="qtitle">2025 Autumn</span><span class="qarrow">›</span></summary>
             <div class="qcontent">
               <ul class="course-list">
-                <li>CMSC 14100 — Introduction to Computer Science I</li>
-                <li>MATH 18300 — Elementary Functions and Calculus I</li>
-                <li>STAT 22000 — Statistical Methods and Applications</li>
+                <li>CMSC 14100 - Introduction to Computer Science I</li>
+                <li>MATH 18300 - Mathematical Methods in the Physical Sciences I</li>
+                <li>STAT 22000 - Statistical Methods and Applications</li>
+                <li>HUMA 11000 - Readings in World Literature I</li>
               </ul>
             </div>
           </details>
@@ -57,9 +58,10 @@
             <summary><span class="qtitle">2025 Winter</span><span class="qarrow">›</span></summary>
             <div class="qcontent">
               <ul class="course-list">
-                <li>CMSC 14200 — Introduction to Computer Science II</li>
-                <li>MATH 18400 — Elementary Functions and Calculus II</li>
-                <li>STAT 24300 — Statistical Theory and Methods</li>
+                <li>CMSC 14200 - Introduction to Computer Science II</li>
+                <li>MATH 18400 - Mathematical Methods in the Physical Sciences II</li>
+                <li>STAT 24300 - Numerical Linear Algebra</li>
+                <li>HUMA 11100 - Readings in World Literature II</li>
               </ul>
             </div>
           </details>
@@ -68,9 +70,10 @@
             <summary><span class="qtitle">2025 Spring</span><span class="qarrow">›</span></summary>
             <div class="qcontent">
               <ul class="course-list">
-                <li></li>
-                <li></li>
-                <li></li>
+                <li>CMSC 14300 - Introduction to Computer Science III</li>
+                <li>CMSC 25300 - Mathematical Foundations of Machine Learning</li>
+                <li>MATH 18500 - Mathematical Methods in the Physical Sciences III</li>
+                <li>MUSI 10100 - Introduction to Western Art Music</li>
               </ul>
             </div>
           </details>
