--- a/portfolio_site/public/education.html
+++ b/portfolio_site/public/education.html
@@ -67,12 +67,12 @@
           </details>
 
           <details class="qitem" open>
-            <summary><span class="qtitle">2025 Spring</span><span class="qarrow">›</span></summary>
+            <summary><span class="qtitle">2025 Spring (Expected)</span><span class="qarrow">›</span></summary>
             <div class="qcontent">
               <ul class="course-list">
                 <li>CMSC 14300 - Introduction to Computer Science III</li>
                 <li>CMSC 25300 - Mathematical Foundations of Machine Learning</li>
-                <li>MATH 18500 - Mathematical Methods in the Physical Sciences III</li>
+                <li>STAT 25100 - Introduction to Mathematical Probability</li>
                 <li>MUSI 10100 - Introduction to Western Art Music</li>
               </ul>
             </div>
