--- a/portfolio_site/public/education.html
+++ b/portfolio_site/public/education.html
@@ -71,8 +71,8 @@
             <div class="qcontent">
               <ul class="course-list">
                 <li>CMSC 14300 - Introduction to Computer Science III</li>
-                <li>CMSC 25300 - Mathematical Foundations of Machine Learning</li>
                 <li>STAT 25100 - Introduction to Mathematical Probability</li>
+                <li>STAT 28200 - Dynamical Systems with Applications</li>
                 <li>MUSI 10100 - Introduction to Western Art Music</li>
               </ul>
             </div>
