--- a/portfolio_site/public/education.html
+++ b/portfolio_site/public/education.html
@@ -70,7 +70,7 @@
             <summary><span class="qtitle">2025 Spring (Expected)</span><span class="qarrow">›</span></summary>
             <div class="qcontent">
               <ul class="course-list">
-                <li>CMSC 14300 - Introduction to Computer Science III</li>
+                <li>CMSC 14300 - Systems Programming I</li>
                 <li>STAT 25100 - Introduction to Mathematical Probability</li>
                 <li>STAT 28200 - Dynamical Systems with Applications</li>
                 <li>MUSI 10100 - Introduction to Western Art Music</li>
@@ -82,9 +82,10 @@
             <summary><span class="qtitle">2026 Autumn</span><span class="qarrow">›</span></summary>
             <div class="qcontent">
               <ul class="course-list">
-                <li></li>
-                <li></li>
-                <li></li>
+                <li>CMSC 14400 - Systems Programming II</li>
+                <li>CMSC 25300 - Mathematical Foundations of Machine Learning</li>
+                <li>CMSC 27100 - Discrete Math</li>
+                <li>STAT 24410 - Statistical Theory and Methods la</li>
               </ul>
             </div>
           </details>
