--- a/portfolio_site/public/education.html
+++ b/portfolio_site/public/education.html
@@ -79,7 +79,7 @@
           </details>
 
           <details class="qitem" open>
-            <summary><span class="qtitle">2026 Autumn</span><span class="qarrow">›</span></summary>
+            <summary><span class="qtitle">2026 Autumn (Expected)</span><span class="qarrow">›</span></summary>
             <div class="qcontent">
               <ul class="course-list">
                 <li>CMSC 14400 - Systems Programming II</li>
