--- a/portfolio_site/public/education.html
+++ b/portfolio_site/public/education.html
@@ -83,7 +83,7 @@
             <div class="qcontent">
               <ul class="course-list">
                 <li>CMSC 14400 - Systems Programming II</li>
-                <li>CMSC 25300 - Mathematical Foundations of Machine Learning</li>
+                <li>CMSC 25400 - Machine Learning</li>
                 <li>CMSC 27100 - Discrete Math</li>
                 <li>STAT 24410 - Statistical Theory and Methods la</li>
               </ul>
