--- a/portfolio_site/public/education.html
+++ b/portfolio_site/public/education.html
@@ -60,7 +60,7 @@
               <ul class="course-list">
                 <li>CMSC 14200 - Introduction to Computer Science II</li>
                 <li>MATH 18400 - Mathematical Methods in the Physical Sciences II</li>
-                <li>STAT 24300 - Numerical Linear Algebra</li>
+                <li>STAT 25100 - Introduction to Mathematical Probability</li>
                 <li>HUMA 11100 - Readings in World Literature II</li>
               </ul>
             </div>
@@ -70,10 +70,10 @@
             <summary><span class="qtitle">2026 Spring (Expected)</span><span class="qarrow">›</span></summary>
             <div class="qcontent">
               <ul class="course-list">
+                <li>MATH 23500 - Markov Chains, Martingales, and Brownian Motion</li>
                 <li>CMSC 14300 - Systems Programming I</li>
                 <li>CMSC 25300 - Mathematical Foundations in Machine Learning</li>
-                <li>STAT 25100 - Introduction to Mathematical Probability</li>
-                <li>STAT 28200 - Dynamical Systems with Applications</li>
+                <li>MUSI 10100 - Introduction to Western Art Music</li>
               </ul>
             </div>
           </details>
