--- a/portfolio_site/public/index.html
+++ b/portfolio_site/public/index.html
@@ -68,8 +68,7 @@
                 <p>Relevant Courses:</p>
                 <p>1. CMSC 14100/14200: Python, data structures, algorithms, recursion, OOP, and basic software engineering</p>
                 <p>2. MATH 18300/18400: Linear algebra + multivariable calculus—eigenvalues; gradients, divergence/curl, Green–Gauss–Stokes </p>
-                <p>3. STAT 22000: Probability, sampling, hypothesis testing, regression, R</p>
-                <p>4. STAT 24300: Matrix decompositions (QR, Singular Value), spectral theorem, systematic methods for high dimensions</p>
+                <p>3. STAT 25100: Axiomatic foundations, combinatorics, conditional probability (Bayes' Rule), random variables, and asymptotic limit theorems (LLN, CLT)</p>
               </div>
               <a class="edu-more" href="/education.html" aria-label="More">More <span class="arrow" aria-hidden="true">→</span></a>
             </div>
